Ensured graphic doesn't overlap paragraph below

--- a/_sass/styles.scss
+++ b/_sass/styles.scss
@@ -26,11 +26,18 @@
     text-align: center;
     color: white;
 	width: 100%;
-	display: block;
+	display: inline-block;
     margin-left: auto;
     margin-right: auto;
 }
 
-.post-graphic {
+.graphic {
+    width: 100vw;
     position: relative;
+    margin-left: -50vw;
+    height: 50px;
+    margin-top: 50px;
+    margin-bottom: 50px;
+    left: 50%;
+    display: inline-block;
 }
